--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-scikit-learn
-numpy
-pandas
-streamlit
-requests
-random
+scikit-learn>=1.5.0
+numpy>=2.0.0
+pandas>=2.2.0
+streamlit>=1.31.0
+requests>=2.31.0
